--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -99,7 +99,7 @@ jobs:
           Write-Host "Starting artifact download process..."
           Write-Host "C2PA_VERSION: $env:C2PA_VERSION"
 
-          python scripts/download_artifacts.py $C2PA_VERSION
+          python scripts/download_artifacts.py "$env:C2PA_VERSION"
 
           Write-Host "Artifacts directory contents:"
           Get-ChildItem -Recurse -Path artifacts
