feat: Prepare publishing flow to PyPi, increase test coverage (#108)
* fix: Dev rebuild

* fix: Install package from local

* fix: Temp deactivation of tests to debug publishing

* fix: split install and wheel build step

* fix: Debug Linux build

* fix: Simplify deps graph

* fix: Source dist

* fix: Fix warning

* fix: Restore macos_x86

* fix: Restore macos_aarch64

* fix: Restore windows step

* fix: Introduce reusable workflow

* fix: Permissions

* fix: restore tests step

* fix: Pytest is touchy about venv

* fix: Missing deps

* fix: split out windows tests

* fix: split out windows tests 2

* fix: Rename steps

* fix: Rename the steps

* fix: Test graph

* fix: name of actions

* fix: Missing params

* fix; conditional check

* fix: auth requests to avoid rate limtis

* fix: Dirs

* fix: test wheel

* fix: Just build

* fix: Test wheels

* fix: Debug build

* fix: Debug build

* fix: Debug build

* fix: Debug build

* fix: Debug build

* fix: Debug build

* fix: Debug build

* fix: Debug build

* fix: Debug build

* fix: Version number check

* fix: Version mismatch issue

* fix: Rename wheels

* fix: Build change

* fix: follow-up text processing fix

* fix: Drop bdist_wheel use

* fix: Missed a spot

* fix: License inclusion in wheel tweaks

* fix: Add back the deny.toml file

* fix: sdist build

* fix: Clean up deps

* fix: setuptools bug handling

* fix: Better makefile

* fix: deps oversight

* fix: Split deps

* fix: Space typo

* fix: bump version

* fix: Upload

* fix: wheel upload debug

* fix over-eager version up

* fix over-eager version up

* fix over-eager version up

* fix: upload of wheels

* fix: upload of wheels

* fix: upload of wheels

* fix: upload of wheels

* fix: upload of wheels

* fix: upload of wheels

* fix: upload of wheels

* fix: upload of wheels

* fix: upload of wheels

* fix: upload of wheels

* fix: upload of wheels

* fix: upload of wheels

* fix: upload of wheels

* fix: upload of wheels

* fix: fix warning

* fix: uploa

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
-include src/c2pa/libs/*.dylib
-include src/c2pa/libs/*.dll
-include src/c2pa/libs/*.so
+include LICENSE-MIT
+include LICENSE-APACHE
+include README.md
+include requirements.txt
+include scripts/download_artifacts.py
+recursive-include src/c2pa *.py
