--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,37 @@
 [build-system]
-requires = ["maturin>=1.7.4,<2.0","uniffi_bindgen>=0.28,<0.30"]
-build-backend = "maturin"
+requires = ["setuptools>=68.0.0", "wheel", "toml>=0.10.2"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "c2pa-python"
-dependencies = ["cffi"]
-requires-python = ">=3.7"
+version = "0.10.15"
+requires-python = ">=3.10"
 description = "Python bindings for the C2PA Content Authenticity Initiative (CAI) library"
 readme = { file = "README.md", content-type = "text/markdown" }
-license = {file = "LICENSE-MIT"}
-keywords = ["C2PA", "CAI", "content credentials", "metadata", "provenance"]
+license = { text = "MIT OR Apache-2.0" }
+authors = [{ name = "Gavin Peacock", email = "gvnpeacock@adobe.com" }, { name = "Tania Mathern", email = "mathern@adobe.com" }]
 classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Programming Language :: Rust",
-    "Programming Language :: Python :: Implementation :: CPython",
-    "Programming Language :: Python :: Implementation :: PyPy"
-]
-authors = [
-  {name = "Gavin Peacock", email = "gpeacock@adobe.com"}
+    "Programming Language :: Python :: 3",
+    "Operating System :: MacOS",
+    "Operating System :: POSIX :: Linux",
+    "Operating System :: Microsoft :: Windows"
 ]
 maintainers = [
   {name = "Gavin Peacock", email = "gpeacock@adobe.com"}
 ]
 urls = {homepage = "https://contentauthenticity.org", repository = "https://github.com/contentauth/c2pa-python"}
-
-[project.optional-dependencies]
-test = [
-  "pytest < 5.0.0"
+dependencies = [
+    "wheel>=0.41.2",
+    "setuptools>=68.0.0",
+    "toml>=0.10.2",
+    "pytest>=7.4.0",
+    "cryptography>=41.0.0",
+    "requests>=2.0.0"
 ]
 
-[tool.maturin]
-module-name = "c2pa"
+[project.scripts]
+download-artifacts = "c2pa.build:download_artifacts"
+
+# Workaround to prevent setuptools from automatically including invalid metadata
+[tool.setuptools]
+license-files = []
