--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,2 @@
-maturin==1.7.4
-uniffi-bindgen==0.28.0
-cryptography==44.0.0
-pytest==8.3.4
+# only used in the training example
+cryptography>=45.0.3
