--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -178,6 +178,8 @@ jobs:
         include:
           - target: x86_64
             runs-on: ubuntu-24.04
+          - target: aarch64
+            runs-on: ubuntu-24.04-arm
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
@@ -194,6 +196,8 @@ jobs:
         include:
           - target: x86_64
             runs-on: ubuntu-24.04
+          - target: aarch64
+            runs-on: ubuntu-24.04-arm
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
