feat: Add a runner for Linux ARM support (#121)
* fix: More docs, and readme for examples

* fix: Wording

* fix: Examples

* fix: Examples

* fix: Examples

* fix: Add a note

* fix: More editorial changes

* fix: Update corrupted file (#120)

* fix: Add a test

* fix: Add a debug test for CAWG

* fix: Fix corrupted file

* fix: Cleaning up

* fix: Fix non-threaded tests

* fix: unrandomize test

* fix: Improve test sensitivity

* fix: Improve comment

* fix: Add a runner

* fix: ARM

* fix: ARM

* fix: ARM

* fix: Comments

* fix: ARM

* fix: ARM

* fix: ARM

* fix: ARM

* fix: ARM

* fix: ARM

* fix: ARM

* fix: Remove logs

* fix: Version bump

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ macos-latest, ubuntu-latest ]
+        os: [ macos-latest, ubuntu-latest, ubuntu-24.04-arm ]
 
     steps:
       - name: Checkout repository
@@ -178,6 +178,8 @@ jobs:
         include:
           - target: x86_64
             runs-on: ubuntu-24.04
+          - target: aarch64
+            runs-on: ubuntu-24.04-arm
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
@@ -194,6 +196,8 @@ jobs:
         include:
           - target: x86_64
             runs-on: ubuntu-24.04
+          - target: aarch64
+            runs-on: ubuntu-24.04-arm
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
@@ -444,6 +448,10 @@ jobs:
           pattern: wheels-*
           path: dist
           merge-multiple: true
+      - name: List downloaded artifacts
+        run: |
+          echo "Downloaded Artifacts"
+          ls -la dist/
       - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
@@ -453,4 +461,3 @@ jobs:
           verbose: true
           # Uncomment below for test runs, otherwise fails on existing packages being reuploaded
           skip-existing: true
-
