--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,3 +13,6 @@ requests>=2.0.0
 
 # Code formatting
 autopep8==2.0.4  # For automatic code formatting
+
+# Test dependencies (for callback signers)
+cryptography==45.0.4
