fix: Update build.yml to fix job name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -452,7 +452,7 @@ jobs:
         run: |
           echo "Downloaded Artifacts"
           ls -la dist/
-      - name: Publish to TestPyPI
+      - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: dist
